# unet-s2-segmentation

./: .gitignore  evaluate.py  predict.py  pyproject.toml  train.py
notebooks/: create_dataset.ipynb
utils/: data_loading.py  dice_score.py  utils.py
