[tool.poetry]
name = "city-segmentation"
version = "0.1.0"
description = "City segmentation using UNET NN"
authors = ["Pierre Louvart <pierre.louvart@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "city_segmentation"}]

[tool.poetry.dependencies]
python = "3.10.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
torch = "^2.1.2"
kaggle = "^1.5.16"
torchvision = "^0.16.2"
wandb = "^0.16.1"
evaluate = "^0.4.1"
geopandas = "^0.14.2"
overpy = "^0.7"
ipykernel = "^6.28.0"
xarray = "^2023.12.0"
rasterio = "^1.3.9"
rioxarray = "^0.15.0"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
